[package]
name = "drb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.145", features = ["derive"] }
serde_json = "^1.0.85"
tungstenite = { version = "^0.17.3", features = ["native-tls"] }
url = "^2.3.1"
